# AzureDevopsMigratorNew

./: .replit  README.md  add_missing_columns.py  backend_log.txt  create_branches_table.py  create_custom_fields_table.py  create_migration_tables.py  create_users_table.py  package-lock.json  package.json  pyproject.toml  run_backend.py  run_python_backend.py  start_backend.sh  start_dev.py  start_python_backend.py  start_python_only.py  start_python_server.sh  update_jobs.py  vite.config.ts
attached_assets/: Pasted--Azure-DevOps-Migration-Tool-Functional-Design-Specification-Objective-Bu-1749648142229_1749648142230.txt  Pasted-1-Fix-ADO-Details-Save-When-the-user-saves-Azure-DevOps-details-in-the-Settings-page-Source-Tar-1749726338876_1749726338876.txt  Pasted-1-Project-Selection-Page-Improvements-Duplicate-Projects-Prevent-duplicate-projects-from-being-di-1749718828782_1749718828782.txt  Pasted-Access-to-fetch-at-http-localhost-8000-api-statistics-from-origin-https-3134776a-c467-4c9c-a3-1749732419634_1749732419634.txt  Pasted-Failed-to-load-resource-the-server-responded-with-a-status-of-500-Internal-Server-Error-Understand-1749728507986_1749728507986.txt
backend/: .env  __init__.py  final_server.py  init_db.py  main.py  main_broken.py  production_main.py  requirements.txt  run.py  simple_main.py  simple_working_main.py  start_server.py  working_server.py
backend/api/: logs.py  main.py  schemas.py
backend/database/: connection.py  models.py
backend/services/: ado_client.py  extraction_service.py
server/: routes.ts  storage.ts
shared/: schema.ts
(+36 files in other folders)
